# Top-N-Music-Genre-Classifier

./: .gitattributes  Makefile  README.md  docker-compose.yml
.github/workflows/: integration_test.yaml  main.yaml
docs/: installation.md
frontend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/.husky/: pre-commit
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  theme.ts
frontend/src/clients/: index.ts  predictGenresClient.ts  types.ts
frontend/src/components/: index.ts
frontend/src/components/AppLayout/: PageLayout.tsx
frontend/src/components/PredictionPanel/: PredictionPanel.tsx  PredictionTable.tsx
frontend/src/components/PredictionPanel/hooks/: index.ts  useGetPredictions.ts
frontend/src/components/UploadButton/: UploadButton.tsx
frontend/src/components/app-layout/: Header.tsx
frontend/src/components/prediction-panel/: PredictionPanel.tsx  index.ts
frontend/src/components/upload-button/: UploadButton.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/utils/: audio.ts
services/: .gitignore  Makefile  install-services.sh
services/etl-service/: pyproject.toml
services/etl-service/cli/: formatters.py  main.py
services/etl-service/etl_service/: data_set_helper.py  database_manager.py  file_convertor.py  gtzan_helper.py  handler.py  main.py
services/etl-service/etl_service/contracts/: exceptions.py  spectrogram.py
services/etl-service/tests/: conftest.py  test_data_set_helpers.py
services/neural-network/: experiment.py  pyproject.toml  test_results.txt
services/neural-network/cli/: app.py  formatters.py  helpers.py  main.py
services/neural-network/evaluation_environment/: main.py
services/neural-network/evaluation_environment/model/: keras_metadata.pb  saved_model.pb
services/neural-network/evaluation_environment/model/variables/: variables.index
services/neural-network/experiment/: plots.py
services/neural-network/experiment2/: plots.py  test_results.txt
services/neural-network/experiment3/: plots.py
services/neural-network/model_refinement/experiment/: plots.py
services/neural-network/model_refinement/experiment2/: experiment.py
services/neural-network/model_refinement/experiment3/: experiment.py  test_results.txt
services/neural-network/neural_network/: data_ingestion_helpers.py  genre_classification_model.py  main.py  train_test_split.py  util.py
services/neural-network/tests/: conftest.py  test_data_ingestion_helpers.py  train_test_split_test.py
services/neural-network/tests/fixtures/: genres.csv  spectrograms.csv
services/prediction-api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/prediction-api/prediction_api/: app.py  config.py  dependencies.py  main.py  middleware.py  mock_prediction.py
services/prediction-api/prediction_api/routers/: __init__.py  predict_genre.py
services/prediction-api/tests/: app_test.py  conftest.py
services/prediction-api/tests/test_api/: conftest.py  test_app.py  test_middleware.py
services/prediction-api/tests/test_api/test_files/: text.txt
services/prediction-api/tests/test_routers/: test_predict_genre.py
services/test/: integration_tests.py
services/utilities/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
services/utilities/alembic/: env.py  script.py.mako
services/utilities/alembic/versions/: 80ef12ba7b10_create_genres_and_spectrograms_tables.py
services/utilities/tests/: audio_processor_test.py  conftest.py  sample_test.py  test_models.py
services/utilities/tests/audio_processor/: test_audio_processor.py
services/utilities/tests/db/: test_connector.py  test_models.py
services/utilities/utilities/audio_processor/: __init__.py  app.py
services/utilities/utilities/db/: connector.py  constants.py  models.py
