[tool.poetry]
name = "etl-service"
version = "0.1.1"
description = "ETL data pipeline"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]
packages = [{include = "etl_service"}]

[tool.poetry.scripts]
start = "cli.main:main"

[tool.poetry.dependencies]
python = "~3.10"
sqlalchemy = "^1.4.44"
typer = "^0.7.0"
rich = "^12.6.0"

[tool.poetry.group.local.dependencies]
utilities = {path = "../utilities"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
