[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = "Model-generating neural network service"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]
packages = [{include = "neural_network"}]

[tool.poetry.scripts]
generate-model = "cli.main:main"
evaluate = "evaluation_environment.main:main"

[tool.poetry.dependencies]
python = "~3.10"
tensorflow-cpu = "^2.10.0"
numpy = "^1.23.4"
typer = "^0.7.0"
rich = "^12.6.0"
tensorflow = "^2.10.0"

[tool.poetry.group.local.dependencies]
utilities = {path = "../utilities"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
