[tool.poetry]
name = "prediction-api"
version = "0.1.0"
description = "Genre prediction API"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]
packages = [{include = "prediction_api"}]

[tool.poetry.dependencies]
tensorflow = "^2.10.0"
python = "~3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"

[tool.poetry.group.local.dependencies]
utilities = {path = "../utilities"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
trio = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
