[tool.poetry]
name = "prediction-api"
version = "0.1.0"
description = "Genre prediction API"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]
packages = [{include = "prediction_api"}]

[tool.poetry.scripts]
start = "prediction_api.main:start_server"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"
tensorflow-cpu = "^2.10.0"
python-dotenv = "^0.21.0"

[tool.poetry.group.local.dependencies]
utilities = {path = "../utilities"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
trio = "^0.22.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
