[tool.poetry]
name = "utilities"
version = "0.1.0"
description = "Shared utilities"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
