[tool.poetry]
name = "utilities"
version = "0.2.0"
description = "Shared utilities"
authors = [
    "Fahad Awan",
    "Donato Quartuccia",
    "Ethan Rietz",
]

[tool.poetry.dependencies]
python = "~3.10"
librosa = "^0.9.2"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
SQLAlchemy = "^1.4.42"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
